# advent-of-code

./: .gitignore
advent-of-code-2015/: Cargo.toml
advent-of-code-2015/input/: day13.txt  day15.txt  day19.txt  day9.txt
advent-of-code-2016/: Cargo.toml
advent-of-code-2024/: Cargo.toml
advent-of-code-2024/.cargo/: config.toml
aoc-2015/: Cargo.toml
aoc-2016/: Cargo.toml
aoc-2024/: Cargo.toml
